# QA-Agent

backend/: .env.local.txt  .gitignore  build.sh  pyproject.toml  requirements.txt  start.sh
backend/app/: main.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.js  page.js
frontend/src/app/about/: page.js
frontend/src/components/chatbot/: ChatIcon.js  Chatbot.js  ChatbotWidget.js
frontend/src/components/company/: CompanyInfo.js
frontend/src/components/home/: HeroSection.js
frontend/src/components/layout/: Footer.js  Navbar.js
