[tool.poetry]
name = "qa-agent"
version = "0.1.0"
description = ""
authors = ["Parag Dharmik"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
langchain-chroma = "^0.2.6"
langchain = "^0.1.16"
langchain-openai = "^0.1.8"
openai = "^0.28.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "tool.poetry.core.masonry.api"